--- a/index.html
+++ b/index.html
@@ -82,6 +82,24 @@
       </div>
       <div class="card-footer bg-transparent border-success title">makontish Rady</div>
     </div>
+    <div class="card text-center p-5">
+      <div class="card-header">
+        <h2 class="card-title title">Yasso Music YouTube Channel</h2>
+      </div>
+      <div class="card-body d-flex flex-column align-items-center">
+        <h5 class="card-title title">creating melodies that tell stories and lyrics that connect. 🎼✨</h5>
+        <p><i class="fa-solid fa-calendar-days"></i> Joined Jan 25, 2025</p>
+
+        <p><i class="fa-solid fa-user-group"></i> 270 subscribers</p>
+
+        <p><i class="fa-solid fa-video"></i> 19 videos</p>
+
+        <p> <i class="fa-solid fa-eye"></i> 49,262 views</p>
+
+        <a href="https://www.youtube.com/@yasomusic1" class="btn btn-primary main-btn rounded-pill title"> <i
+            class="fa-brands fa-youtube"></i> Yasso music</a>
+      </div>
+    </div>
   </div>
 
   <footer class="text-light mt-3">
