--- a/contact.html
+++ b/contact.html
@@ -201,7 +201,7 @@
         <div class="col-md-4">
           <h5 class="title">About</h5>
           <p>
-            Yasso Music is a creative space for sound, ideas, and rhythm.
+            Yaso Music is a creative space for sound, ideas, and rhythm.
             Built with passion and purpose.
           </p>
         </div>
@@ -232,7 +232,7 @@
       </div>
     </div>
     <div class="text-center pt-3 border-top border-secondary mt-3">
-      &copy; 2025 Yasso Music. All rights reserved.
+      &copy; 2025 Ysso Music. All rights reserved.
     </div>
   </footer>
 </body>
