--- a/content.html
+++ b/content.html
@@ -251,8 +251,8 @@
                     <img src="assets/screen15.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title title">helm ha'a'to</h5>
-                        <p class="card-text"><i class="fa-solid fa-eye"></i> 120 views</p>
-                        <p class="card-text"><i class="fa-solid fa-heart"></i> 16 likes</p>
+                        <p class="card-text"><i class="fa-solid fa-eye"></i> 280 views</p>
+                        <p class="card-text"><i class="fa-solid fa-heart"></i> 10 likes</p>
                     </div>
                     <div class="card-footer">
                         <small class="text-body-secondary">Last updated 3 mins ago</small>
@@ -267,7 +267,7 @@
       <div class="row">
         <div class="col-md-4">
           <h5 class="title">About</h5>
-          <p>Yasso Music is a creative space for sound, ideas, and rhythm. Built with passion and purpose.</p>
+          <p>Yaso Music is a creative space for sound, ideas, and rhythm. Built with passion and purpose.</p>
         </div>
         <div class="col-md-4">
           <h5 class="title">Quick Links</h5>
@@ -288,7 +288,7 @@
       </div>
     </div>
     <div class="text-center pt-3 border-top border-secondary mt-3">
-      &copy; 2025 Yasso Music. All rights reserved.
+      &copy; 2025 Ysso Music. All rights reserved.
     </div>
   </footer>
 </body>
