--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
     </div>
     <div class="card text-center p-5">
       <div class="card-header">
-        <h2 class="card-title title">Yasso Music YouTube Channel</h2>
+        <h2 class="card-title title">Yaso Music YouTube Channel</h2>
       </div>
       <div class="card-body d-flex flex-column align-items-center">
         <h5 class="card-title title">creating melodies that tell stories and lyrics that connect. 🎼✨</h5>
@@ -97,7 +97,7 @@
         <p> <i class="fa-solid fa-eye"></i> 49,262 views</p>
 
         <a href="https://www.youtube.com/@yasomusic1" class="btn btn-primary main-btn rounded-pill title"> <i
-            class="fa-brands fa-youtube"></i> Yasso music</a>
+            class="fa-brands fa-youtube"></i> Yaso music</a>
       </div>
     </div>
   </div>
