--- a/protofolio.html
+++ b/protofolio.html
@@ -46,7 +46,7 @@
 
   <div class="protolanding text-light container-fluid d-flex justify-content-start align-items-start">
     <div class="overlay">
-      <h1 class="title">Meet Yasso</h1>
+      <h1 class="title">Meet Yaso</h1>
     </div>
   </div>
 
@@ -113,7 +113,7 @@
   <div class="socialmedia text-light container-fluid">
     <div class="card text-center p-5">
       <div class="card-header">
-        <h2 class="card-title title">Yasso Music YouTube Channel</h2>
+        <h2 class="card-title title">Yaso Music YouTube Channel</h2>
       </div>
       <div class="card-body d-flex flex-column align-items-center">
         <h5 class="card-title title">creating melodies that tell stories and lyrics that connect. 🎼✨</h5>
@@ -126,7 +126,7 @@
         <p> <i class="fa-solid fa-eye"></i> 49,262 views</p>
 
         <a href="https://www.youtube.com/@yasomusic1" class="btn btn-primary main-btn rounded-pill title"> <i
-            class="fa-brands fa-youtube"></i> Yasso music</a>
+            class="fa-brands fa-youtube"></i> Yaso music</a>
       </div>
     </div>
     <div class="row g-0 p-5">
@@ -167,7 +167,7 @@
       <div class="row">
         <div class="col-md-4">
           <h5 class="title">About</h5>
-          <p>Yasso Music is a creative space for sound, ideas, and rhythm. Built with passion and purpose.</p>
+          <p>Yaso Music is a creative space for sound, ideas, and rhythm. Built with passion and purpose.</p>
         </div>
         <div class="col-md-4">
           <h5 class="title">Quick Links</h5>
@@ -188,7 +188,7 @@
       </div>
     </div>
     <div class="text-center pt-3 border-top border-secondary mt-3">
-      &copy; 2025 Yasso Music. All rights reserved.
+      &copy; 2025 Yaso Music. All rights reserved.
     </div>
   </footer>
 </body>
