--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>yassomusic</title>
+  <link rel="icon" href="assets/logo.jpg" type="image/png" />
   <link rel="stylesheet" href="css/bootstrap.min.css" />
   <link rel="stylesheet" href="css/all.min.css" />
   <link rel="stylesheet" href="css/style.css" />
@@ -107,7 +108,7 @@
       <div class="row">
         <div class="col-md-4">
           <h5 class="title">About</h5>
-          <p>Yasso Music is a creative space for sound, ideas, and rhythm. Built with passion and purpose.</p>
+          <p>Yaso Music is a creative space for sound, ideas, and rhythm. Built with passion and purpose.</p>
         </div>
         <div class="col-md-4">
           <h5 class="title">Quick Links</h5>
